--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,8 @@
-extends layout
-
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+html
+    head
+        title No page there!
+        link(rel="stylesheet" href="/stylesheet/style.css")
+    body
+        h1= message
+        h2= error.status
+        pre #{error.stack}
