fixed broken link

--- a/views/error.jade
+++ b/views/error.jade
@@ -1,7 +1,7 @@
 html
     head
         title No page there!
-        link(rel="stylesheet" href="/stylesheet/style.css")
+        link(rel="stylesheet" href="/stylesheets/style.css")
     body
         h1= message
         h2= error.status
