--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,8 @@
         href="https://twitter.com/zachwe">Twitter</a>,
     <a
         href="https://www.goodreads.com/user/show/5520387-zach-wener-fligner">Goodreads</a>, and <a href="https://projecteuler.net/progress=zbwener">Project
-        Euler</a>.</p>
+        Euler</a>. You can email me at zbwener at gmail dot com. Please feel
+    free to reach out--I like good people and cool opportunities.</p>
         
 </body>
 
