updated project euler link

--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,8 @@
         href="https://www.linkedin.com/profile/view?id=116682247&trk=nav_responsive_tab_profile">LinkedIn</a>, <a
         href="https://twitter.com/zachwe">Twitter</a>,
     <a
-        href="https://www.goodreads.com/user/show/5520387-zach-wener-fligner">Goodreads</a>, and <a href="https://projecteuler.net/progress=zbwener">Project
+        href="https://www.goodreads.com/user/show/5520387-zach-wener-fligner">Goodreads</a>,
+    and <a href="https://projecteuler.net/profile/zbwener.png">Project
         Euler</a>. You can email me at zbwener at gmail dot com. Please feel
     free to reach out--I like good people and cool opportunities.</p>
         
