--- a/views/index.html
+++ b/views/index.html
@@ -55,8 +55,7 @@
     <a
         href="https://www.goodreads.com/user/show/5520387-zach-wener-fligner">Goodreads</a>,
     and <a href="https://projecteuler.net/profile/zbwener.png">Project
-        Euler</a>. You can email me at zbwener at gmail dot com. Please feel
-    free to reach out--I like good people and cool opportunities.</p>
+        Euler</a>. You can email me at zbwener at gmail dot com.</p>
         
 </body>
 
