--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,13 @@
 <body>
     <h1>Zach Wener-Fligner</h1>
     <p>
-        I'm a software engineer and writer who currently lives in Brooklyn, New
-        York. I'm currently employed by <a href="http://qz.com">Quartz</a> as
+        I'm a software engineer and sometimes-writer who currently lives in San
+        Francisco, California. I work at <a href="http://mixpanel.com">Mixpanel</a>, 
+        where I build products that help thousands of our customers make sense
+        of billions of data points on their users.
+    </p>
+    <p>
+        Previously, I worked at <a href="http://qz.com">Quartz</a> as
         part of the Atlantic Media Fellowship, a selective yearlong fellowship
         for recent college graduates to work for The Atlantic and its sister
         publications. The fellowship lasts through June 2014.
